# na_anti_pike

./: README.md  main.py  requirements.txt
exam2/2/: main.cpp
practice2sem/: 1.c  2.c  3.cpp  4-5.cpp  6.cpp  6ShowGraph.py  7.c  CMakeLists.txt  CMakeLists4.txt  CMakeLists6.txt  CMakeListsold.txt  CmakeLists3.txt  Matrix.cpp  Matrix.h  Model.cpp  Model.h  Modellegacy.cpp  Modellegacy.h  TVector.h  main.c  main.cpp  output.csv  reserve6.cpp
practice2sem/seventh/: CMakeLists.txt  main.f90
tasks/theory/: Подготовка информатика. Указатели.docx
terms/exam1/: 1.h  10.h  11.h  14.h  2.h  3.h  4.h  5.h  6.h  7.h  8.h  9.h
terms/exam2/13/: main.cpp
terms/exam2/7/: main.cpp
terms/exam2/8/: main.cpp
terms/exam2/9/: main.cpp
terms/sem1/: 1.h  1.txt  10.h  azam.h  hh.h  hhh.h  laba6.h  laba7.h  laba71.h  laba72.h  laba73.h  laba82.h  labar81.h  tmp.h
terms/sem2/: 1.h  2.h  3.h  4.h  6.h
terms/sem2/7/: functions.cpp  functions.h  main.cpp  out.txt  out2.txt
terms/sem2/8RLS/: CMakeLists.txt  TRLS.cpp  TRLS.h  TTarget.cpp  TTarget.h  functions.cpp  functions.h  input.txt  main.cpp  output.csv  output.txt
