cmake_minimum_required(VERSION 3.25)
project(practice2sem C)


set(CMAKE_C_STANDARD 99)

add_executable(practice2sem sofa/20210512/c/src/a2af.c
        sofa/20210512/c/src/a2tf.c
        sofa/20210512/c/src/ab.c
        sofa/20210512/c/src/ae2hd.c
        sofa/20210512/c/src/af2a.c
        sofa/20210512/c/src/anp.c
        sofa/20210512/c/src/anpm.c
        sofa/20210512/c/src/apcg.c
        sofa/20210512/c/src/apcg13.c
        sofa/20210512/c/src/apci.c
        sofa/20210512/c/src/apci13.c
        sofa/20210512/c/src/apco.c
        sofa/20210512/c/src/apco13.c
        sofa/20210512/c/src/apcs.c
        sofa/20210512/c/src/apcs13.c
        sofa/20210512/c/src/aper.c
        sofa/20210512/c/src/aper13.c
        sofa/20210512/c/src/apio.c
        sofa/20210512/c/src/apio13.c
        sofa/20210512/c/src/atcc13.c
        sofa/20210512/c/src/atccq.c
        sofa/20210512/c/src/atci13.c
        sofa/20210512/c/src/atciq.c
        sofa/20210512/c/src/atciqn.c
        sofa/20210512/c/src/atciqz.c
        sofa/20210512/c/src/atco13.c
        sofa/20210512/c/src/atic13.c
        sofa/20210512/c/src/aticq.c
        sofa/20210512/c/src/aticqn.c
        sofa/20210512/c/src/atio13.c
        sofa/20210512/c/src/atioq.c
        sofa/20210512/c/src/atoc13.c
        sofa/20210512/c/src/atoi13.c
        sofa/20210512/c/src/atoiq.c
        sofa/20210512/c/src/bi00.c
        sofa/20210512/c/src/bp00.c
        sofa/20210512/c/src/bp06.c
        sofa/20210512/c/src/bpn2xy.c
        sofa/20210512/c/src/c2i00a.c
        sofa/20210512/c/src/c2i00b.c
        sofa/20210512/c/src/c2i06a.c
        sofa/20210512/c/src/c2ibpn.c
        sofa/20210512/c/src/c2ixy.c
        sofa/20210512/c/src/c2ixys.c
        sofa/20210512/c/src/c2s.c
        sofa/20210512/c/src/c2t00a.c
        sofa/20210512/c/src/c2t00b.c
        sofa/20210512/c/src/c2t06a.c
        sofa/20210512/c/src/c2tcio.c
        sofa/20210512/c/src/c2teqx.c
        sofa/20210512/c/src/c2tpe.c
        sofa/20210512/c/src/c2txy.c
        sofa/20210512/c/src/cal2jd.c
        sofa/20210512/c/src/cp.c
        sofa/20210512/c/src/cpv.c
        sofa/20210512/c/src/cr.c
        sofa/20210512/c/src/d2dtf.c
        sofa/20210512/c/src/d2tf.c
        sofa/20210512/c/src/dat.c
        sofa/20210512/c/src/dtdb.c
        sofa/20210512/c/src/dtf2d.c
        sofa/20210512/c/src/eceq06.c
        sofa/20210512/c/src/ecm06.c
        sofa/20210512/c/src/ee00.c
        sofa/20210512/c/src/ee00a.c
        sofa/20210512/c/src/ee00b.c
        sofa/20210512/c/src/ee06a.c
        sofa/20210512/c/src/eect00.c
        sofa/20210512/c/src/eform.c
        sofa/20210512/c/src/eo06a.c
        sofa/20210512/c/src/eors.c
        sofa/20210512/c/src/epb.c
        sofa/20210512/c/src/epb2jd.c
        sofa/20210512/c/src/epj.c
        sofa/20210512/c/src/epj2jd.c
        sofa/20210512/c/src/epv00.c
        sofa/20210512/c/src/eqec06.c
        sofa/20210512/c/src/eqeq94.c
        sofa/20210512/c/src/era00.c
        sofa/20210512/c/src/fad03.c
        sofa/20210512/c/src/fae03.c
        sofa/20210512/c/src/faf03.c
        sofa/20210512/c/src/faju03.c
        sofa/20210512/c/src/fal03.c
        sofa/20210512/c/src/falp03.c
        sofa/20210512/c/src/fama03.c
        sofa/20210512/c/src/fame03.c
        sofa/20210512/c/src/fane03.c
        sofa/20210512/c/src/faom03.c
        sofa/20210512/c/src/fapa03.c
        sofa/20210512/c/src/fasa03.c
        sofa/20210512/c/src/faur03.c
        sofa/20210512/c/src/fave03.c
        sofa/20210512/c/src/fk425.c
        sofa/20210512/c/src/fk45z.c
        sofa/20210512/c/src/fk524.c
        sofa/20210512/c/src/fk52h.c
        sofa/20210512/c/src/fk54z.c
        sofa/20210512/c/src/fk5hip.c
        sofa/20210512/c/src/fk5hz.c
        sofa/20210512/c/src/fw2m.c
        sofa/20210512/c/src/fw2xy.c
        sofa/20210512/c/src/g2icrs.c
        sofa/20210512/c/src/gc2gd.c
        sofa/20210512/c/src/gc2gde.c
        sofa/20210512/c/src/gd2gc.c
        sofa/20210512/c/src/gd2gce.c
        sofa/20210512/c/src/gmst00.c
        sofa/20210512/c/src/gmst06.c
        sofa/20210512/c/src/gmst82.c
        sofa/20210512/c/src/gst00a.c
        sofa/20210512/c/src/gst00b.c
        sofa/20210512/c/src/gst06.c
        sofa/20210512/c/src/gst06a.c
        sofa/20210512/c/src/gst94.c
        sofa/20210512/c/src/h2fk5.c
        sofa/20210512/c/src/hd2ae.c
        sofa/20210512/c/src/hd2pa.c
        sofa/20210512/c/src/hfk5z.c
        sofa/20210512/c/src/icrs2g.c
        sofa/20210512/c/src/ir.c
        sofa/20210512/c/src/jd2cal.c
        sofa/20210512/c/src/jdcalf.c
        sofa/20210512/c/src/ld.c
        sofa/20210512/c/src/ldn.c
        sofa/20210512/c/src/ldsun.c
        sofa/20210512/c/src/lteceq.c
        sofa/20210512/c/src/ltecm.c
        sofa/20210512/c/src/lteqec.c
        sofa/20210512/c/src/ltp.c
        sofa/20210512/c/src/ltpb.c
        sofa/20210512/c/src/ltpecl.c
        sofa/20210512/c/src/ltpequ.c
        sofa/20210512/c/src/moon98.c
        sofa/20210512/c/src/num00a.c
        sofa/20210512/c/src/num00b.c
        sofa/20210512/c/src/num06a.c
        sofa/20210512/c/src/numat.c
        sofa/20210512/c/src/nut00a.c
        sofa/20210512/c/src/nut00b.c
        sofa/20210512/c/src/nut06a.c
        sofa/20210512/c/src/nut80.c
        sofa/20210512/c/src/nutm80.c
        sofa/20210512/c/src/obl06.c
        sofa/20210512/c/src/obl80.c
        sofa/20210512/c/src/p06e.c
        sofa/20210512/c/src/p2pv.c
        sofa/20210512/c/src/p2s.c
        sofa/20210512/c/src/pap.c
        sofa/20210512/c/src/pas.c
        sofa/20210512/c/src/pb06.c
        sofa/20210512/c/src/pdp.c
        sofa/20210512/c/src/pfw06.c
        sofa/20210512/c/src/plan94.c
        sofa/20210512/c/src/pm.c
        sofa/20210512/c/src/pmat00.c
        sofa/20210512/c/src/pmat06.c
        sofa/20210512/c/src/pmat76.c
        sofa/20210512/c/src/pmp.c
        sofa/20210512/c/src/pmpx.c
        sofa/20210512/c/src/pmsafe.c
        sofa/20210512/c/src/pn.c
        sofa/20210512/c/src/pn00.c
        sofa/20210512/c/src/pn00a.c
        sofa/20210512/c/src/pn00b.c
        sofa/20210512/c/src/pn06.c
        sofa/20210512/c/src/pn06a.c
        sofa/20210512/c/src/pnm00a.c
        sofa/20210512/c/src/pnm00b.c
        sofa/20210512/c/src/pnm06a.c
        sofa/20210512/c/src/pnm80.c
        sofa/20210512/c/src/pom00.c
        sofa/20210512/c/src/ppp.c
        sofa/20210512/c/src/ppsp.c
        sofa/20210512/c/src/pr00.c
        sofa/20210512/c/src/prec76.c
        sofa/20210512/c/src/pv2p.c
        sofa/20210512/c/src/pv2s.c
        sofa/20210512/c/src/pvdpv.c
        sofa/20210512/c/src/pvm.c
        sofa/20210512/c/src/pvmpv.c
        sofa/20210512/c/src/pvppv.c
        sofa/20210512/c/src/pvstar.c
        sofa/20210512/c/src/pvtob.c
        sofa/20210512/c/src/pvu.c
        sofa/20210512/c/src/pvup.c
        sofa/20210512/c/src/pvxpv.c
        sofa/20210512/c/src/pxp.c
        sofa/20210512/c/src/refco.c
        sofa/20210512/c/src/rm2v.c
        sofa/20210512/c/src/rv2m.c
        sofa/20210512/c/src/rx.c
        sofa/20210512/c/src/rxp.c
        sofa/20210512/c/src/rxpv.c
        sofa/20210512/c/src/rxr.c
        sofa/20210512/c/src/ry.c
        sofa/20210512/c/src/rz.c
        sofa/20210512/c/src/s00.c
        sofa/20210512/c/src/s00a.c
        sofa/20210512/c/src/s00b.c
        sofa/20210512/c/src/s06.c
        sofa/20210512/c/src/s06a.c
        sofa/20210512/c/src/s2c.c
        sofa/20210512/c/src/s2p.c
        sofa/20210512/c/src/s2pv.c
        sofa/20210512/c/src/s2xpv.c
        sofa/20210512/c/src/sepp.c
        sofa/20210512/c/src/seps.c
        sofa/20210512/c/src/sp00.c
        sofa/20210512/c/src/starpm.c
        sofa/20210512/c/src/starpv.c
        sofa/20210512/c/src/sxp.c
        sofa/20210512/c/src/sxpv.c
        sofa/20210512/c/src/taitt.c
        sofa/20210512/c/src/taiut1.c
        sofa/20210512/c/src/taiutc.c
        sofa/20210512/c/src/tcbtdb.c
        sofa/20210512/c/src/tcgtt.c
        sofa/20210512/c/src/tdbtcb.c
        sofa/20210512/c/src/tdbtt.c
        sofa/20210512/c/src/tf2a.c
        sofa/20210512/c/src/tf2d.c
        sofa/20210512/c/src/tpors.c
        sofa/20210512/c/src/tporv.c
        sofa/20210512/c/src/tpsts.c
        sofa/20210512/c/src/tpstv.c
        sofa/20210512/c/src/tpxes.c
        sofa/20210512/c/src/tpxev.c
        sofa/20210512/c/src/tr.c
        sofa/20210512/c/src/trxp.c
        sofa/20210512/c/src/trxpv.c
        sofa/20210512/c/src/tttai.c
        sofa/20210512/c/src/tttcg.c
        sofa/20210512/c/src/tttdb.c
        sofa/20210512/c/src/ttut1.c
        sofa/20210512/c/src/ut1tai.c
        sofa/20210512/c/src/ut1tt.c
        sofa/20210512/c/src/ut1utc.c
        sofa/20210512/c/src/utctai.c
        sofa/20210512/c/src/utcut1.c
        sofa/20210512/c/src/xy06.c
        sofa/20210512/c/src/xys00a.c
        sofa/20210512/c/src/xys00b.c
        sofa/20210512/c/src/xys06a.c
        sofa/20210512/c/src/zp.c
        sofa/20210512/c/src/zpv.c
        sofa/20210512/c/src/zr.c
        7.c sofa/20210512/c/src/sofa.h)