cmake_minimum_required(VERSION 3.25)
project(seventh Fortran)
set(CMAKE_Fortran_COMPILER "C:/Users/akbar/AppData/Local/JetBrains/Toolbox/apps/CLion/ch-0/231.9161.40/bin/mingw/bin/gfortran.exe")

enable_language(Fortran)
add_executable(seventh sofa/20210512/f77/src/a2af.for
        sofa/20210512/f77/src/a2tf.for
        sofa/20210512/f77/src/ab.for
        sofa/20210512/f77/src/ae2hd.for
        sofa/20210512/f77/src/af2a.for
        sofa/20210512/f77/src/anp.for
        sofa/20210512/f77/src/anpm.for
        sofa/20210512/f77/src/apcg.for
        sofa/20210512/f77/src/apcg13.for
        sofa/20210512/f77/src/apci.for
        sofa/20210512/f77/src/apci13.for
        sofa/20210512/f77/src/apco.for
        sofa/20210512/f77/src/apco13.for
        sofa/20210512/f77/src/apcs.for
        sofa/20210512/f77/src/apcs13.for
        sofa/20210512/f77/src/aper.for
        sofa/20210512/f77/src/aper13.for
        sofa/20210512/f77/src/apio.for
        sofa/20210512/f77/src/apio13.for
        sofa/20210512/f77/src/atcc13.for
        sofa/20210512/f77/src/atccq.for
        sofa/20210512/f77/src/atci13.for
        sofa/20210512/f77/src/atciq.for
        sofa/20210512/f77/src/atciqn.for
        sofa/20210512/f77/src/atciqz.for
        sofa/20210512/f77/src/atco13.for
        sofa/20210512/f77/src/atic13.for
        sofa/20210512/f77/src/aticq.for
        sofa/20210512/f77/src/aticqn.for
        sofa/20210512/f77/src/atio13.for
        sofa/20210512/f77/src/atioq.for
        sofa/20210512/f77/src/atoc13.for
        sofa/20210512/f77/src/atoi13.for
        sofa/20210512/f77/src/atoiq.for
        sofa/20210512/f77/src/bi00.for
        sofa/20210512/f77/src/bp00.for
        sofa/20210512/f77/src/bp06.for
        sofa/20210512/f77/src/bpn2xy.for
        sofa/20210512/f77/src/c2i00a.for
        sofa/20210512/f77/src/c2i00b.for
        sofa/20210512/f77/src/c2i06a.for
        sofa/20210512/f77/src/c2ibpn.for
        sofa/20210512/f77/src/c2ixy.for
        sofa/20210512/f77/src/c2ixys.for
        sofa/20210512/f77/src/c2s.for
        sofa/20210512/f77/src/c2t00a.for
        sofa/20210512/f77/src/c2t00b.for
        sofa/20210512/f77/src/c2t06a.for
        sofa/20210512/f77/src/c2tcio.for
        sofa/20210512/f77/src/c2teqx.for
        sofa/20210512/f77/src/c2tpe.for
        sofa/20210512/f77/src/c2txy.for
        sofa/20210512/f77/src/cal2jd.for
        sofa/20210512/f77/src/cp.for
        sofa/20210512/f77/src/cpv.for
        sofa/20210512/f77/src/cr.for
        sofa/20210512/f77/src/d2dtf.for
        sofa/20210512/f77/src/d2tf.for
        sofa/20210512/f77/src/dat.for
        sofa/20210512/f77/src/dtdb.for
        sofa/20210512/f77/src/dtf2d.for
        sofa/20210512/f77/src/eceq06.for
        sofa/20210512/f77/src/ecm06.for
        sofa/20210512/f77/src/ee00.for
        sofa/20210512/f77/src/ee00a.for
        sofa/20210512/f77/src/ee00b.for
        sofa/20210512/f77/src/ee06a.for
        sofa/20210512/f77/src/eect00.for
        sofa/20210512/f77/src/eform.for
        sofa/20210512/f77/src/eo06a.for
        sofa/20210512/f77/src/eors.for
        sofa/20210512/f77/src/epb.for
        sofa/20210512/f77/src/epb2jd.for
        sofa/20210512/f77/src/epj.for
        sofa/20210512/f77/src/epj2jd.for
        sofa/20210512/f77/src/epv00.for
        sofa/20210512/f77/src/eqec06.for
        sofa/20210512/f77/src/eqeq94.for
        sofa/20210512/f77/src/era00.for
        sofa/20210512/f77/src/fad03.for
        sofa/20210512/f77/src/fae03.for
        sofa/20210512/f77/src/faf03.for
        sofa/20210512/f77/src/faju03.for
        sofa/20210512/f77/src/fal03.for
        sofa/20210512/f77/src/falp03.for
        sofa/20210512/f77/src/fama03.for
        sofa/20210512/f77/src/fame03.for
        sofa/20210512/f77/src/fane03.for
        sofa/20210512/f77/src/faom03.for
        sofa/20210512/f77/src/fapa03.for
        sofa/20210512/f77/src/fasa03.for
        sofa/20210512/f77/src/faur03.for
        sofa/20210512/f77/src/fave03.for
        sofa/20210512/f77/src/fk425.for
        sofa/20210512/f77/src/fk45z.for
        sofa/20210512/f77/src/fk524.for
        sofa/20210512/f77/src/fk52h.for
        sofa/20210512/f77/src/fk54z.for
        sofa/20210512/f77/src/fk5hip.for
        sofa/20210512/f77/src/fk5hz.for
        sofa/20210512/f77/src/fw2m.for
        sofa/20210512/f77/src/fw2xy.for
        sofa/20210512/f77/src/g2icrs.for
        sofa/20210512/f77/src/gc2gd.for
        sofa/20210512/f77/src/gc2gde.for
        sofa/20210512/f77/src/gd2gc.for
        sofa/20210512/f77/src/gd2gce.for
        sofa/20210512/f77/src/gmst00.for
        sofa/20210512/f77/src/gmst06.for
        sofa/20210512/f77/src/gmst82.for
        sofa/20210512/f77/src/gst00a.for
        sofa/20210512/f77/src/gst00b.for
        sofa/20210512/f77/src/gst06.for
        sofa/20210512/f77/src/gst06a.for
        sofa/20210512/f77/src/gst94.for
        sofa/20210512/f77/src/h2fk5.for
        sofa/20210512/f77/src/hd2ae.for
        sofa/20210512/f77/src/hd2pa.for
        sofa/20210512/f77/src/hfk5z.for
        sofa/20210512/f77/src/icrs2g.for
        sofa/20210512/f77/src/ir.for
        sofa/20210512/f77/src/jd2cal.for
        sofa/20210512/f77/src/jdcalf.for
        sofa/20210512/f77/src/ld.for
        sofa/20210512/f77/src/ldn.for
        sofa/20210512/f77/src/ldsun.for
        sofa/20210512/f77/src/lteceq.for
        sofa/20210512/f77/src/ltecm.for
        sofa/20210512/f77/src/lteqec.for
        sofa/20210512/f77/src/ltp.for
        sofa/20210512/f77/src/ltpb.for
        sofa/20210512/f77/src/ltpecl.for
        sofa/20210512/f77/src/ltpequ.for
        sofa/20210512/f77/src/moon98.for
        sofa/20210512/f77/src/num00a.for
        sofa/20210512/f77/src/num00b.for
        sofa/20210512/f77/src/num06a.for
        sofa/20210512/f77/src/numat.for
        sofa/20210512/f77/src/nut00a.for
        sofa/20210512/f77/src/nut00b.for
        sofa/20210512/f77/src/nut06a.for
        sofa/20210512/f77/src/nut80.for
        sofa/20210512/f77/src/nutm80.for
        sofa/20210512/f77/src/obl06.for
        sofa/20210512/f77/src/obl80.for
        sofa/20210512/f77/src/p06e.for
        sofa/20210512/f77/src/p2pv.for
        sofa/20210512/f77/src/p2s.for
        sofa/20210512/f77/src/pap.for
        sofa/20210512/f77/src/pas.for
        sofa/20210512/f77/src/pb06.for
        sofa/20210512/f77/src/pdp.for
        sofa/20210512/f77/src/pfw06.for
        sofa/20210512/f77/src/plan94.for
        sofa/20210512/f77/src/pm.for
        sofa/20210512/f77/src/pmat00.for
        sofa/20210512/f77/src/pmat06.for
        sofa/20210512/f77/src/pmat76.for
        sofa/20210512/f77/src/pmp.for
        sofa/20210512/f77/src/pmpx.for
        sofa/20210512/f77/src/pmsafe.for
        sofa/20210512/f77/src/pn.for
        sofa/20210512/f77/src/pn00.for
        sofa/20210512/f77/src/pn00a.for
        sofa/20210512/f77/src/pn00b.for
        sofa/20210512/f77/src/pn06.for
        sofa/20210512/f77/src/pn06a.for
        sofa/20210512/f77/src/pnm00a.for
        sofa/20210512/f77/src/pnm00b.for
        sofa/20210512/f77/src/pnm06a.for
        sofa/20210512/f77/src/pnm80.for
        sofa/20210512/f77/src/pom00.for
        sofa/20210512/f77/src/ppp.for
        sofa/20210512/f77/src/ppsp.for
        sofa/20210512/f77/src/pr00.for
        sofa/20210512/f77/src/prec76.for
        sofa/20210512/f77/src/pv2p.for
        sofa/20210512/f77/src/pv2s.for
        sofa/20210512/f77/src/pvdpv.for
        sofa/20210512/f77/src/pvm.for
        sofa/20210512/f77/src/pvmpv.for
        sofa/20210512/f77/src/pvppv.for
        sofa/20210512/f77/src/pvstar.for
        sofa/20210512/f77/src/pvtob.for
        sofa/20210512/f77/src/pvu.for
        sofa/20210512/f77/src/pvup.for
        sofa/20210512/f77/src/pvxpv.for
        sofa/20210512/f77/src/pxp.for
        sofa/20210512/f77/src/refco.for
        sofa/20210512/f77/src/rm2v.for
        sofa/20210512/f77/src/rv2m.for
        sofa/20210512/f77/src/rx.for
        sofa/20210512/f77/src/rxp.for
        sofa/20210512/f77/src/rxpv.for
        sofa/20210512/f77/src/rxr.for
        sofa/20210512/f77/src/ry.for
        sofa/20210512/f77/src/rz.for
        sofa/20210512/f77/src/s00.for
        sofa/20210512/f77/src/s00a.for
        sofa/20210512/f77/src/s00b.for
        sofa/20210512/f77/src/s06.for
        sofa/20210512/f77/src/s06a.for
        sofa/20210512/f77/src/s2c.for
        sofa/20210512/f77/src/s2p.for
        sofa/20210512/f77/src/s2pv.for
        sofa/20210512/f77/src/s2xpv.for
        sofa/20210512/f77/src/sepp.for
        sofa/20210512/f77/src/seps.for
        sofa/20210512/f77/src/sp00.for
        sofa/20210512/f77/src/starpm.for
        sofa/20210512/f77/src/starpv.for
        sofa/20210512/f77/src/sxp.for
        sofa/20210512/f77/src/sxpv.for
        sofa/20210512/f77/src/taitt.for
        sofa/20210512/f77/src/taiut1.for
        sofa/20210512/f77/src/taiutc.for
        sofa/20210512/f77/src/tcbtdb.for
        sofa/20210512/f77/src/tcgtt.for
        sofa/20210512/f77/src/tdbtcb.for
        sofa/20210512/f77/src/tdbtt.for
        sofa/20210512/f77/src/tf2a.for
        sofa/20210512/f77/src/tf2d.for
        sofa/20210512/f77/src/tpors.for
        sofa/20210512/f77/src/tporv.for
        sofa/20210512/f77/src/tpsts.for
        sofa/20210512/f77/src/tpstv.for
        sofa/20210512/f77/src/tpxes.for
        sofa/20210512/f77/src/tpxev.for
        sofa/20210512/f77/src/tr.for
        sofa/20210512/f77/src/trxp.for
        sofa/20210512/f77/src/trxpv.for
        sofa/20210512/f77/src/tttai.for
        sofa/20210512/f77/src/tttcg.for
        sofa/20210512/f77/src/tttdb.for
        sofa/20210512/f77/src/ttut1.for
        sofa/20210512/f77/src/ut1tai.for
        sofa/20210512/f77/src/ut1tt.for
        sofa/20210512/f77/src/ut1utc.for
        sofa/20210512/f77/src/utctai.for
        sofa/20210512/f77/src/utcut1.for
        sofa/20210512/f77/src/xy06.for
        sofa/20210512/f77/src/xys00a.for
        sofa/20210512/f77/src/xys00b.for
        sofa/20210512/f77/src/xys06a.for
        sofa/20210512/f77/src/zp.for
        sofa/20210512/f77/src/zpv.for
        sofa/20210512/f77/src/zr.for
        main.f90)

